2.4.4
------


2.4.3
------
(RB=468269)
Remove try-catch in parseAcceptEncodingHeader().

(RB=475642)
Removing unused title field from the Link.pdsc.

2.4.2
------
(RB=473188)
Add back log4j.xml in generator and data-avro-generator module.

2.4.1
------
(RB=453114)
Add new status code constants for redirection and added new property key for redirection hops.

(RB=471298)
Fix a bug in HttpClientFactory where _clientsOutstanding can go negative if client#shutdown 
is called multiple times on the same client and thus preventing clientFactory to be shutdown.

(RB=472316)
bug fix in ConfigRunner of d2 quick-start example

2.4.0
------
(RB=444062)
Migrate r2 to netty4.
(RB=444153)
Add more r2 integration tests.
(RB=444082)
Refactor restli-int-test to properly shutdown R2 client/clientFactory

2.3.0
------
(RB=426274)
Rewrite KeyMapper API
(RB=462831)
Fix race condition in D2 when Zookeeper is slow.

2.2.12
------
(RB=433868)
Handle key coercion error for CompoundKey and BatchKey to return 400.

2.2.11
------
(RB=455451)
Formally support the Java 8 compiler to create 1.6 target source files
(RB=461320)
using servlet container threads to do IO for response in AbstractAsyncR2Servlet
(RB=462881)
Migrate to using log4j2 internally in pegasus.
Fixed and consolidated the r2 perf tests.
(RB=467222)
Disable transient failing d2 tests

(RB=466051)
Move QueryTunnel to filters

2.2.10
------
(RB=440822)
Fixed key value conversion for typeref key without custom Java binding.

(RB=446624)
Provide configuration for acceptType and contentType in RestLiRequestOptions per request.

2.2.9
-----
(RB=445163)
Fixed DefaultMessageSerializer to support cookies and non-ASCII message entities.

2.2.8
-----
(RB=446341)
Generate indented avro schemas

2.2.7
-----
(RB=446424)
Allow selective response decompression for ClientCompressionFilter.

2.2.6
-----
(RB=439521)
Add feature to QueryTunnelUtil and fix a bug in encode of MimeMultiPart entity

(RB=436399)